--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,4 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 RAJAONGKIR_API_KEY=
+MIDTRANS_SERVER_KEY=
