duitku sandbox integration

--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,8 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 RAJAONGKIR_API_KEY=
 MIDTRANS_SERVER_KEY=
+
+DUITKU_MERCHANT_KEY=
+DUITKU_MERCHANT_CODE=
+
+WEB_CLIENT_URL=
